--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -1,23 +1,25 @@
-name: Screenshot Automation
+name: Screenshot PowerBI e Envio Telegram
 
 on:
   schedule:
-    - cron: '*/15 * * * *' # Executa a cada 15 minutos
-  workflow_dispatch:
+    - cron: '*/15 * * * *'  # Executa a cada 15 minutos
+  workflow_dispatch:        # Permite execução manual
 
 jobs:
-  screenshot:
+  screenshot_and_telegram:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clonar repositório
+      - name: Clonar o repositório
         uses: actions/checkout@v4
 
-      - name: Instalar dependências
+      - name: Instalar dependências do sistema
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium-browser
-          npm install puppeteer
+          sudo apt-get install -y chromium-browser curl
 
-      - name: Executar script de screenshot
-        run: bash ./scripts/tirar_screenshot.sh "https://app.powerbi.com/view?r=eyJrIjoiY2Q3NDU0ZTYtNzBjNS00NzE5LTkzMzEtMGU3ODRhZDc4YjY5IiwidCI6ImQ4NDI2OWQ4LWMxNWUtNGRmMS1iOWRmLTBlNjAzMWMzZjc0YyJ9"
+      - name: Instalar dependências Node.js
+        run: npm install puppeteer
+
+      - name: Executar script de screenshot e envio para Telegram
+        run: bash scripts/tirar_screenshot.sh
