--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "telegramimage",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests specified\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "puppeteer": "^21.3.8"
+  }
 }
