--- a/.github/workflows/screenshot-to-telegram.yml
+++ b/.github/workflows/screenshot-to-telegram.yml
@@ -2,34 +2,80 @@ name: Screenshot Power BI and Send to Telegram
 
 on:
   schedule:
-    - cron: '50 13 * * *'  # 10:50 BRT
-    - cron: '50 21 * * *'  # 18:50 BRT
-    - cron: '50 5 * * *'   # 02:50 BRT
+    - cron: '50 13 * * *'
+    - cron: '50 21 * * *'
+    - cron: '50 5 * * *'
   workflow_dispatch:
 
 jobs:
-  screenshot_and_send:
+  send_1050:
+    if: github.event.schedule == '50 13 * * *'
     runs-on: ubuntu-latest
-
     env:
       API_KEY_TELEGRAM: ${{ secrets.API_KEY_TELEGRAM }}
       CHAT_ID: ${{ secrets.CHAT_ID }}
+      CHAT_ID_EDU: ${{ secrets.CHAT_ID_EDU }}
       CHROMIUM_PATH: /usr/bin/chromium
+      LINK: https://app.powerbi.com/view?r=eyJrIjoiY2Q3NDU0ZTYtNzBjNS00NzE5LTkzMzEtMGU3ODRhZDc4YjY5IiwidCI6ImQ4NDI2OWQ4LWMxNWUtNGRmMS1iOWRmLTBlNjAzMWMzZjc0YyJ9&pageName=34385227a03acc0a5e40
 
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
-
       - name: Instalar Chromium
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium
-
       - name: Instalar dependências Node.js
         run: npm ci
-
       - name: Dar permissão ao script
         run: chmod +x scripts/tirar_screenshot.sh
+      - name: Executar captura e envio para Telegram
+        run: bash scripts/tirar_screenshot.sh
 
+  send_1850:
+    if: github.event.schedule == '50 21 * * *'
+    runs-on: ubuntu-latest
+    env:
+      API_KEY_TELEGRAM: ${{ secrets.API_KEY_TELEGRAM }}
+      CHAT_ID: ${{ secrets.CHAT_ID }}
+      CHAT_ID_EDU: ${{ secrets.CHAT_ID_EDU }}
+      CHROMIUM_PATH: /usr/bin/chromium
+      LINK: https://app.powerbi.com/view?r=eyJrIjoiY2Q3NDU0ZTYtNzBjNS00NzE5LTkzMzEtMGU3ODRhZDc4YjY5IiwidCI6ImQ4NDI2OWQ4LWMxNWUtNGRmMS1iOWRmLTBlNjAzMWMzZjc0YyJ9&pageName=7f65ebceb5411ad885b4
+
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v4
+      - name: Instalar Chromium
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium
+      - name: Instalar dependências Node.js
+        run: npm ci
+      - name: Dar permissão ao script
+        run: chmod +x scripts/tirar_screenshot.sh
+      - name: Executar captura e envio para Telegram
+        run: bash scripts/tirar_screenshot.sh
+
+  send_0250:
+    if: github.event.schedule == '50 5 * * *'
+    runs-on: ubuntu-latest
+    env:
+      API_KEY_TELEGRAM: ${{ secrets.API_KEY_TELEGRAM }}
+      CHAT_ID: ${{ secrets.CHAT_ID }}
+      CHAT_ID_EDU: ${{ secrets.CHAT_ID_EDU }}
+      CHROMIUM_PATH: /usr/bin/chromium
+      LINK: https://app.powerbi.com/view?r=eyJrIjoiY2Q3NDU0ZTYtNzBjNS00NzE5LTkzMzEtMGU3ODRhZDc4YjY5IiwidCI6ImQ4NDI2OWQ4LWMxNWUtNGRmMS1iOWRmLTBlNjAzMWMzZjc0YyJ9&pageName=071d76c0be0333607220
+
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v4
+      - name: Instalar Chromium
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium
+      - name: Instalar dependências Node.js
+        run: npm ci
+      - name: Dar permissão ao script
+        run: chmod +x scripts/tirar_screenshot.sh
       - name: Executar captura e envio para Telegram
         run: bash scripts/tirar_screenshot.sh
