--- a/.github/workflows/screenshot-to-telegram.yml
+++ b/.github/workflows/screenshot-to-telegram.yml
@@ -2,9 +2,9 @@ name: Screenshot Power BI and Send to Telegram
 
 on:
   schedule:
-    - cron: '50 13 * * *'
-    - cron: '50 21 * * *'
-    - cron: '50 5 * * *'
+    - cron: '50 13 * * *'  # 10:50 BRT
+    - cron: '50 21 * * *'  # 18:50 BRT
+    - cron: '50 5 * * *'   # 02:50 BRT
   workflow_dispatch:
 
 jobs:
@@ -78,4 +78,5 @@ jobs:
       - name: Dar permissão ao script
         run: chmod +x scripts/tirar_screenshot.sh
       - name: Executar captura e envio para Telegram
-        run: bash scripts/tirar_screenshot.sh
+        run: bash scripts/tirar*
+
