--- a/.github/workflows/screenshot-to-telegram.yml
+++ b/.github/workflows/screenshot-to-telegram.yml
@@ -78,5 +78,4 @@ jobs:
       - name: Dar permissão ao script
         run: chmod +x scripts/tirar_screenshot.sh
       - name: Executar captura e envio para Telegram
-        run: bash scripts/tirar*
-
+        run: bash scripts/tirar_screenshot.sh
