--- a/.github/workflows/screenshot-to-telegram-1850.yml
+++ b/.github/workflows/screenshot-to-telegram-1850.yml
@@ -13,6 +13,7 @@ jobs:
       CHAT_ID: ${{ secrets.CHAT_ID }}
       CHAT_ID_EDU: ${{ secrets.CHAT_ID_EDU }}
       CHROMIUM_PATH: /usr/bin/chromium
+      CHAT_ID_WELL: ${{ secrets.CHAT_ID_WELL }}
       LINK: https://app.powerbi.com/view?r=eyJrIjoiY2Q3NDU0ZTYtNzBjNS00NzE5LTkzMzEtMGU3ODRhZDc4YjY5IiwidCI6ImQ4NDI2OWQ4LWMxNWUtNGRmMS1iOWRmLTBlNjAzMWMzZjc0YyJ9&pageName=7f65ebceb5411ad885b4
 
     steps:
