--- a/.github/workflows/screenshot-to-telegram-1050.yml
+++ b/.github/workflows/screenshot-to-telegram-1050.yml
@@ -13,6 +13,7 @@ jobs:
       CHAT_ID: ${{ secrets.CHAT_ID }}
       CHAT_ID_EDU: ${{ secrets.CHAT_ID_EDU }}
       CHAT_ID_WELL: ${{ secrets.CHAT_ID_WELL }}
+      CHAT_GROUP_ID: ${{ secrets.CHAT_GROUP_ID }}
       CHROMIUM_PATH: /usr/bin/chromium
       LINK: https://app.powerbi.com/view?r=eyJrIjoiY2Q3NDU0ZTYtNzBjNS00NzE5LTkzMzEtMGU3ODRhZDc4YjY5IiwidCI6ImQ4NDI2OWQ4LWMxNWUtNGRmMS1iOWRmLTBlNjAzMWMzZjc0YyJ9&pageName=34385227a03acc0a5e40
 
